<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.ragentek.homeset.ui.login.LoginActivity">

    <LinearLayout
        android:id="@+id/hint_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/step_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_bind"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/qrcode_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_qrcode_hint"
            android:textSize="20sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/qrcode_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hint_layer" />

    <ImageView
        android:id="@+id/qrcode"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/skip"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textStyle="bold" />

        <Button
            android:id="@+id/system_setting"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="系统设置"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>