<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/image_music_album"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder_disk"
        fresco:actualImageScaleType="centerCrop"
        fresco:placeholderImage="@drawable/placeholder_disk"
        fresco:placeholderImageScaleType="centerCrop"
        fresco:viewAspectRatio="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="30dp">

        <TextView
            android:id="@+id/tv_music_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_name"
            android:textSize="@dimen/list_item_text_size_big"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="：" />

            <TextView
                android:id="@+id/tv_music_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="听见花开" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/singer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="：" />

            <TextView
                android:id="@+id/tv_music_singer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="李健" />


        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_music_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</LinearLayout>
